Fixed toggle alignment

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -15,7 +15,6 @@ h1,
   font-family: "Montserrat", sans-serif;
   font-size: 2.5em;
   margin-left: 15px;
-  margin-top: -30px;
 }
 
 p,
@@ -32,10 +31,6 @@ nav {
   font-size: 1.5em;
 }
 
-.nav {
-  margin-top: 10px;
-}
-
 .navbar {
   -webkit-box-align: end;
       -ms-flex-align: end;
@@ -50,10 +45,6 @@ nav {
           align-items: flex-end;
   padding: 0 15px;
   color: #73a2ff !important;
-}
-
-.navbar-nav {
-  margin-bottom: 10px !important;
 }
 
 .profile__portrait {
@@ -266,7 +257,7 @@ button :focus {
     grid-row: auto/auto;
   }
 }
-@media all and (min-width: 500px) and (max-width: 768px) {
+@media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     -ms-grid-columns: 1fr 10px 1fr;
     grid-template-columns: 1fr 1fr;
