--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,6 @@ h1,
   font-family: "Montserrat", sans-serif;
   font-size: 2.5em;
   margin-left: 15px;
-  margin-top: -30px;
 }
 
 p,
@@ -34,10 +33,6 @@ nav {
   font-size: 1.5em;
 }
 
-.nav {
-  margin-top: 10px;
-}
-
 .navbar,
 .nav-link {
   align-items: flex-end;
@@ -45,9 +40,6 @@ nav {
   color: var(--primary-color) !important;
 }
 
-.navbar-nav {
-  margin-bottom: 10px !important;
-}
 .profile__portrait {
   float: left;
   width: 250px;
@@ -206,7 +198,7 @@ button {
   }
 }
 
-@media all and (min-width: 500px) and (max-width: 768px) {
+@media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     grid-template-columns: 1fr 1fr;
     margin: 0 10px;
@@ -216,7 +208,6 @@ button {
         grid-row: auto/auto;
       }
   }
-
   h1 {
     font-size: 1.25em;
   }
